--- a/styles.css
+++ b/styles.css
@@ -10,5 +10,140 @@
     --secondary-text-color: #577592;
     --accent-color:#2294ed;
     --accent-color-dark: #1d69a3;
-    --paddind-inline-section: 20px;
+    --padding-inline-section: 20px;
+}
+body{
+    font-family:'Poppins',sans-serif;
+    color:var(--primary-text-color);
+}
+h1{
+    font-size: 3rem;
+
+}
+h2{
+    font-size: 2rem;
+
+}
+h3{
+    font-size:1.5rem;
+}
+p{
+    font-family: 'Roboto',sans-serif;
+    font-size: 1.25rem;
+    color: var(--primary-text-color);
+    line-height: 1.8rem;
+}
+a{
+    text-decoration: none;
+    display: inline-block;
+}
+/*Utility Classes*/
+.small-bold-text{
+    font-size: 1rem;
+    font-weight: 700;
+}
+.container{
+ max-width: 1180px;
+ margin-inline: auto ;
+ padding-inline: var(--padding-inline-section);
+
+}
+.top-banner{
+    background-image: url('./assets/asset\ 32.png');
+    background-color: #4fb3d4;
+    background-size: 300px;
+}
+.banner-text{
+    color: white;
+    padding: 15px 30px;
+    text-align: center;
+}
+.main-nav{
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.flex{
+    display: flex;
+    align-items: center;
+}
+ul{
+    list-style: none;
+}
+.company-logo img{
+    width: 200px;
+}
+.nav-links{
+    flex-basis: 30px
+}
+.nav-links ul{
+    font-weight: 600;
+    justify-content: end;
+    gap: 40px;
+}
+.hover-link{
+    color: var(--primary-text-color);
+    transition: 0.2s ease-out;
+}
+.hover-link:hover{
+    color: var(--accent-color);
+}
+
+.primary-button{
+background-color: var(--accent-color);
+border-radius: 6px;
+font-weight: 600;
+color: white !important;
+padding: 12px 24px;
+box-shadow:0 0 2px var(--secondary-text-color) ;
+transition: 0.2s ease-out;
+}
+.primary-button:hover{
+    background-color: var(--accent-color-dark);
+}
+.secondary-button{
+    border: 2px solid var(--secondary-text-color);
+    border-radius: 6px;
+    font-weight: 600;
+    color: var(--primary-text-color) !important;
+    padding: 12px 24px;
+    
+    transition: 0.2s ease-out;
+    }
+.secondary-button:hover{
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+    
+    transition: 0.2s ease-out;
+}
+
+header{
+    padding: 50px var(--padding-inline-section) 0;
+}
+.header-section{
+    justify-content: center;
+    gap: 50px;
+}
+.hearder-left{
+    max-width: 40vh;
+}
+.hearder-left h1{
+    margin-top: 20px;
+}
+.header-left a{
+    margin: 20px 0;
+}
+.header-right img{
+    width: 600px;
+}
+
+.companies-header{
+    margin-block: 30px;
+    text-align: center;
+    color: var(--primary-text-color);
+}
+.logos{
+    justify-content: space-between;
+}
+.logo{
+    height:46px;
 }
