--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,169 @@ header{
 }
 .logos{
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .logo{
     height:46px;
 }
+.features-section{
+padding: 80px var(--padding-inline-section) 0;
+background-image: url(./assets/asset\ 34.svg);
+background-repeat: no-repeat;
+background-position: center;
+}
+.features-header{
+    text-align: center;
+    
+}
+.features-heading-text{
+    margin-bottom: 20px;
+}
+
+.features-area{
+    margin-top: 40px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
+}
+.features-card{
+    flex-direction: column;
+    gap: 20px;
+    max-width: 30%;
+    text-align: center;
+
+}
+.features-card img{
+    width: 60px;
+}
+.big-feature-section{
+    padding: 30px var(--padding-inline-section) 0;
+}
+.big-feature-container{
+    gap: 30px;
+}
+.feature-image img{
+    width: 100%;
+}
+.feature-description{
+    flex-direction: column;
+    align-items: flex-start;
+}
+.examples-header{
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+}
+.examples-card{
+    width: 23%;
+    position:relative;
+    min-height: 300px;
+    background: black;
+    background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)),url(assets/asset\ 36.jpeg);
+    background-size: cover;
+    transition: ease 0.2s;
+    border-radius: 6px;
+}
+.examples-card:hover{
+    box-shadow:0 0 10px #888 ;
+}
+.card-text{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    right:20px;
+    color: white;
+
+}
+.examples-area{
+    justify-content: space-between;
+    margin-block: 30px;
+}
+.examples-card:nth-child(1){
+    background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)),url(assets/asset\ 37.jpeg);
+    background-size:cover;
+
+}
+.examples-card:nth-child(2){
+    background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)),url(assets/asset\ 38.jpeg);
+    background-size: cover;
+}
+.examples-card:nth-child(3){
+    background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)),url(assets/asset\ 39.jpeg);
+    background-size:cover;
+}
+.pannel{
+    margin-block: 20px;   
+}
+.pannel ul{
+    flex-direction: column;
+    list-style:circle;
+    align-items: flex-start;
+}
+
+.pannel ul li{
+    margin: 10px 0;
+    color: white;
+    
+}
+.participants-section{
+    margin-top: 30px;
+}
+
+.participants{
+    width: 100%;
+    background-color: #183b56;
+    margin: 100px 0;  
+}
+.participants-text >h2{
+color:white;
+}
+.participants-text >p{
+    margin-top: 10px;
+color: white;
+}
+.participants-text> h3{
+    margin-top: 10px;
+    color:white;
+}
+.pannel-text >h3{
+    color: white;
+}
+.cta-section-container{
+    flex-direction: column;
+    gap: 30px;
+}
+.cta-section{
+    padding:90px var(--padding-inline-section) 80px;
+
+}
+footer{
+    padding-block: 80px;
+    background-color: #ebf2fa;
+}
+.link-column{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    
+}
+.footer-container{
+    align-items: flex-start;
+    justify-content: space-between;
+}
+/* sub-footer */
+.sub-footer{
+    background-color: #b9b9b9;
+    padding: var(--padding-inline-section);
+
+
+}
+.sub-footer-container{
+    justify-content: center;
+    gap: 30px;
+
+    
+}
+
+
+
